[package]
name = "netlink_wi"
version = "0.7.0-rc2"
authors = [
    "Olli Paakkunainen <olli@paakkunainen.fi>",
    "Adarsh Krishnan <adarshk7@gmail.com>",
]
edition = "2021"
description = """
A library to retrieve information about wireless hardware
in Linux operating system using netlink protocol.
"""
categories = ["os::linux-apis"]
keywords = ["netlink", "linux", "wifi", "nl80211"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uption/netlink_wi"
include = ["**/*.rs", "Cargo.toml", "LICENSE"]

[lib]
name = "netlink_wi"
path = "src/lib.rs"

[dependencies]
bitflags = "2.3.3"
log = "0.4"
neli = { version = "0.7.0-rc2", features = ["sync", "async"] }
neli-proc-macros = "0.2.0-rc2"

[dev-dependencies]
simple_logger = "4.2.0"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
