[package]
name = "netlink_wi"
version = "0.7.0-rc5"
authors = [
    "Olli Paakkunainen <olli@paakkunainen.fi>",
    "Adarsh Krishnan <adarshk7@gmail.com>",
]
edition = "2021"
description = """
A library to retrieve information about wireless hardware
in Linux operating system using netlink protocol.
"""
categories = ["os::linux-apis"]
keywords = ["netlink", "linux", "wifi", "nl80211"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uption/netlink_wi"
include = ["**/*.rs", "Cargo.toml", "LICENSE"]

[lib]
name = "netlink_wi"
path = "src/lib.rs"

[dependencies]
bitflags = "2.8"
log = "0.4"
neli = "0.7.0-rc3"
neli-proc-macros = "0.2.0-rc3"
nix = "0.30"

[dev-dependencies]
simple_logger = "5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["sync"]
sync = ["neli/sync"]
async = ["neli/async"]
